# perovskite-eda

./: .gitignore  ANALYSIS_EXECUTION_REPORT.txt  CLAUDE.md  DASHBOARD_GUIDE.md  DISTRIBUTION_ANALYSIS_SUMMARY.md  FINAL_SUMMARY.md  Makefile  PROGRESS_SUMMARY.md  QSPR_Correlation_Analysis_Summary.md  README.md  SHAP_ANALYSIS_SUMMARY.md  ap_tt_analysis_correct.py  ap_tt_final_analysis.py  ap_tt_fingerprint_analysis.py  ap_tt_summary_report.md  autogluon_ml_report.md  autogluon_optimization.py  build_ml_models.py  calculate_rdkit_descriptors.py  chem_space_report.txt  chemical_space_analysis.py  chemical_space_analysis_fast.py  chemical_space_final.py  comprehensive_distribution_analysis.py  correlation_analysis.py  critical_review.txt  data_preprocessing.py  distribution_analysis.py  distribution_analysis_report.txt  ecfp_analysis.py  generate_autogluon_plots.py  generate_autogluon_report.py  generate_train_test_scatter.py  hyperparameter_tuning.py  hyperparameter_tuning_report.txt  krfp_analysis.py  krfp_analysis_fast.py  krfp_analysis_v2.py  krfp_analysis_v3.py  krfp_final.py  (+11 more)
automl/: analyze_with_automl.py  model_generalization.py  model_interpretability.py  multitask_learning.py
data/: data_dictionary.md  data_version.txt
figures/: correlation_report.txt
gnn/: gnn_gan_integration.py
hybrid_agent_exploration/: .gitignore  AGENTS.md  RESULTS_AGENTIC_CLEANING.md  extract_xlsx_fast.py  literature_benchmark_comparison.md  literature_survey.md  pipeline_architecture.md  requirements.txt  run_all.sh  run_all_explorations.sh  run_exploration_0004.py  run_explore.sh  (+5 more)
(+187 files in other folders)
